第10章 泛型算法

--- a/第10 章 泛型算法.md
+++ b/第10 章 泛型算法.md
@@ -1,36 +1,29 @@
 <!-- TOC -->
 
 - [第10章 泛型算法](#第10章-泛型算法)
-  - [10.1 概述](#101-概述)
-  - [10.2 初识泛型算法](#102-初识泛型算法)
-    - [10.2.1 只读算法 `find`, `accumulate`](#1021-只读算法-find-accumulate)
-      - [算法和元素类型 `accumulate`](#算法和元素类型-accumulate)
-      - [操作两个序列的算法 `equal`](#操作两个序列的算法-equal)
-    - [10.2.2 写容器元素的算法](#1022-写容器元素的算法)
-      - [算法不检查写操作](#算法不检查写操作)
-      - [介绍 `back_inserter`](#介绍-back_inserter)
-      - [拷贝算法](#拷贝算法)
-    - [总结一下](#总结一下)
-    - [10.2.3 重排容器元素的算法](#1023-重排容器元素的算法)
-      - [消除重复单词](#消除重复单词)
-      - [使用`unique`](#使用unique)
-      - [使用容器操作删除元素](#使用容器操作删除元素)
-  - [10.3 定制操作](#103-定制操作)
-    - [10.3.1 向算法传递函数](#1031-向算法传递函数)
-      - [谓词 (predicate)](#谓词-predicate)
-      - [排序算法](#排序算法)
-    - [10.3.2 lambda表达式](#1032-lambda表达式)
-    - [10.3.3 lambda捕获和返回](#1033-lambda捕获和返回)
-    - [10.3.4 参数绑定](#1034-参数绑定)
-  - [10.4 再探迭代器](#104-再探迭代器)
-    - [10.4.1 插入迭代器](#1041-插入迭代器)
-    - [10.4.2 iostream迭代器](#1042-iostream迭代器)
-    - [10.4.3 反向迭代器](#1043-反向迭代器)
-  - [10.5 泛型算法结构](#105-泛型算法结构)
-    - [10.5.1 5类迭代器](#1051-5类迭代器)
-    - [10.5.2 算法形参模式](#1052-算法形参模式)
-    - [10.5.3 算法命名规范](#1053-算法命名规范)
-  - [10.6 特定容器算法](#106-特定容器算法)
+    - [10.1 概述](#101-概述)
+    - [10.2 初识泛型算法](#102-初识泛型算法)
+        - [10.2.1 只读算法 `find`, `accumulate`](#1021-只读算法-find-accumulate)
+            - [算法和元素类型 `accumulate`](#算法和元素类型-accumulate)
+            - [操作两个序列的算法 `equal`](#操作两个序列的算法-equal)
+        - [10.2.2 写容器元素的算法](#1022-写容器元素的算法)
+            - [算法不检查写操作](#算法不检查写操作)
+            - [介绍 `back_inserter`](#介绍-back_inserter)
+            - [拷贝算法](#拷贝算法)
+        - [总结一下](#总结一下)
+        - [10.2.3 重排容器元素的算法](#1023-重排容器元素的算法)
+            - [消除重复单词](#消除重复单词)
+            - [使用`unique`](#使用unique)
+            - [使用容器操作删除元素](#使用容器操作删除元素)
+    - [10.3 定制操作](#103-定制操作)
+        - [10.3.1 向算法传递函数](#1031-向算法传递函数)
+            - [谓词 (predicate)](#谓词-predicate)
+            - [排序算法](#排序算法)
+- [include <iostream>](#include-iostream)
+- [include <fstream>](#include-fstream)
+- [include <vector>](#include-vector)
+- [include "Sales_data.h"](#include-sales_datah)
+- [include <algorithm>](#include-algorithm)
 
 <!-- /TOC -->
 
@@ -56,7 +49,7 @@ int val = 42;   // 我们将查找的值
 auto result = find(vec.cbegin(), vec.cend(), val);
 // 报告结果
 cout << "The value " << val
-     << (result = vec.cend() ? " is not present" : "is present") << endl;
+     << (result == vec.cend() ? " is not present" : "is present") << endl;
 ```
 
 由于`find`操作的是迭代器，因此我们可以用同样的`find`函数在任何容器中查找值。
@@ -72,10 +65,11 @@ auto result = find(lst.cbegin(), lst.cend(), val);
 // 我们可以用 find 在数组中查找值：
 int a[] = {27, 210, 12, 47, 109, 83};
 int val = 83;
-int *result = find(begin(ia), end(ia), val);
+int* result = find(begin(ia), end(ia), val);
 ```
 
 还可以在序列的子范围中查找，只需将指向子范围首元素和尾元素之后位置的迭代器（指针）传递给`find`。
+例如，下面你的语句在 `ia[1]`、`ia[2]` 和 `ia[3]` 中查找给定元素。
 
 ```cpp
 // 在从 ia[1] 开始，直至（但不包含）ia[4] 的范围内查找元素怒
@@ -145,7 +139,7 @@ int main(int argc, char *argv[])
 {
     ifstream in(argv[1]);
     if (!in) {
-        cout << "Failes to open the file!" << endl;
+        cout << "Fails to open the file!" << endl;
         exit(1);
     }
 
@@ -167,13 +161,53 @@ int main(int argc, char *argv[])
 }
 ```
 
-关键概念：算法永远不会执行容器的操作
+**练习10.2：重做上一题，但读取 `string` 序列存入list中。**
+
+解答：理解“泛型”的优点。
+可以看到，与上一题对比，程序的变化只在不同类型变量的声明上，而算法的使用部分几乎没有任何差异。
+
+```cpp
+/*练习 10.2：重做上一题，但读取 string 序列存入 list 中。
+【解答】可以看到，与上一题对比．程序的变化只在不同类型变量的声明上，而算法的 使用部分几乎没有任何差异。*/
+
+#include <iostream>
+#include <fstream>
+#include <string>
+#include <list>
+#include <algorithm>
+
+using namespace std;
+
+int main(int argc, char *argv[])
+{
+    ifstream in(argv[1]);
+    if (!in) {
+        cout << "Fails to open the file!" << endl;
+        exit(1);
+    }
+
+    list<string> ls;
+    string word;
+    while (in >> word)
+        ls.push_back(word);
+    
+    cout << "Please enter the strings you wanna search: ";
+    cin >> word;
+
+    cout << "The sequence contains " << count(ls.begin(), ls.end(), word)
+         << "个" << word;
+    
+    return 0;
+}
+```
+
+**关键概念：算法永远不会执行容器的操作。**
 
 ## 10.2 初识泛型算法
 
 ### 10.2.1 只读算法 `find`, `accumulate`
 
-`find`, `accumulate`(定义在`numeric`中)
+`find`, `count`, `accumulate`(定义在`numeric`中)
 
 `accumulate`函数接受三个参数，前两个指出了需要求和的元素的范围，第三个参数是和的初值。
 假定`vec`是一个整数序列，则：
@@ -185,9 +219,11 @@ int sum = accumulate(vec.cbegin(), vec.cend(), 0);
 
 这条语句将`sum`设置为`vec`中元素的和，和的初值被设置为`0`。
 
+**Note**：`accumulate` 的第三个参数的类型决定了函数中使用哪个加法运算以及返回值的类型。
+
 #### 算法和元素类型 `accumulate`
 
-`accumulate`将第三个参数作为求和起点，这蕴含着个编程假定：将元素类型加到 和的类型上的操作必须是可行的。即，序列中元素的类型必须与第三个参数匹配，或者能够转换为第三个参数的类型。
+`accumulate`将第三个参数作为求和起点，这蕴含着个编程假定：将元素类型加到和的类型上的操作必须是可行的。即，序列中元素的类型必须与第三个参数匹配，或者能够转换为第三个参数的类型。
 
 下面是另一个例子，由于`string`定义了`+`运算符，所以我们可以通过调用`accumulate`来将`vector`中所有`string`元素连接起来：
 
@@ -207,7 +243,7 @@ string sum = accumulate(v.cbegin(), v.cend(), "");
 
 原因在于，如果我们传递了一个字符串字面值．用于保存和的对象的类型将是`const char*`。如前所述，此类型决定了使用哪个`+`运算符。由于`const char*`并没有`+`运算符， 此调用将产生编译错误。
 
-注意：对于只读取而不改变元素的算法，通常最好使用`cbegin()`和`cend()`。
+**Best Practices**：对于只读取而不改变元素的算法，通常最好使用`cbegin()`和`cend()`。
 但是，如果你计划使用算法返回的迭代器来改变元素的值，就需要使用`begin()`和`end()`的结果作为参数。
 
 #### 操作两个序列的算法 `equal`
@@ -220,7 +256,11 @@ string sum = accumulate(v.cbegin(), v.cend(), "");
 equal(roster1.cbegin(), roster1.cend(), roster2.cbegin());
 ```
 
-WARNING: 那些只接受一个单一迭代器来表示第二个序列的算法，都假定第二个序列至少与第一个序列一样长。
+由于 `equal` 利用迭代器完成操作，因此我们可以通过调用 `equal` 来比较两个不同类型的容器中的元素。而且，元素类型也不必一样，只要我们能用 `==` 来比较两个元素类型即可。 例如，在此例中，`roster1` 可以是 `vector<string>`, 而 `roster2` 是 `list<const char*>`。
+
+但是，`equal` 基于一个非常重要的假设：它假定第二个序列至少与第一个序列一样长。 此算法要处理第一个序列中的每个元素，它假定每个元素在第二个序列中都有一个与之对应的元素。
+
+**WARNING**: 那些只接受一个单一迭代器来表示第二个序列的算法，都假定第二个序列至少与第一个序列一样长。
 
 **练习10.3：用 accumulate 求一个 `vector<int>` 中的元素之和。**
 
@@ -257,6 +297,43 @@ int main(int argc, char *argv[])
 }
 ```
 
+```C++
+/*练习10.4：假定 v 是一个 vector<double>，那么调用 accumulate(v.cbegin(), v.cend(), 0) 有何错误（如果存在的话）？
+
+【解答】accumulate 的第三个参数是和的初值，它还决定了函数的返回类型，以及函数中使用哪个加法运算符。因此，本题中的调用是错误的，第三个参数 0 告知accumulate，和是整型的，使用整型加法运算符。
+读者可尝试输入带小数的值．函数返回的是一个整数。
+
+正确的调用方法是将 0.0 作为第三个参数传递给 accumulate。
+读者可以修改、运行程序，观察运行结果。*/
+
+#include <iostream>
+#include <fstream>
+#include <vector>
+#include <algorithm>
+#include <numeric>
+
+using namespace std;
+
+int main(int argc, char *argv[])
+{
+    ifstream in(argv[1]);
+    if (!in) {
+        cout << "Fails to open the file!" << endl;
+        exit(1);
+    }
+
+    vector<double> vd;
+    double val;
+    while (in >> val)
+        vd.push_back(val);
+    
+    cout << "The sum of the floats in the sequence is: " 
+         << accumulate(vd.begin(), vd.end(), 0.0) << endl;
+
+    return 0;
+}
+```
+
 **练习10.5：在本节对名册(roster)调用 `equal` 的例子中，如果两个名册中保存的都是 C 风格字符串而不是 `string`，会发生什么？**
 
 【解答】
@@ -267,18 +344,17 @@ int main(int argc, char *argv[])
 所以，只有当两个序列中的指针都指向相同的地址时，`equal` 才会返回 `true`。否则，即使字符串内容完全相同，也会返回 `false`。
 
 如下面的程序，`q` 中的每个字符串是 `p` 中字符串的拷贝，虽然内容相同，但是不同对象指向不同地址，因此 `equal` 判定它们不等。
+而 `r` 中每个指针都是 `p` 中指针的拷贝，指向相同的地址，因此 `equal` 判定它们相等。
+
 [注]：`strdup` 可以直接把要复制的内容复制给没有初始化的指针，因为它会自动分配空间给目的指针。
 `strdup` 不是标准的c函数。`strdup()` 在内部调用了 `malloc()` 为变量分配内存，不需要使用返回的字符串时，需要用 `free()` 释放相应的内存空间，否则会造成内存泄漏。
 
-而 `r` 中每个指针都是 `p` 中指针的拷贝，指向相同的地址，因此 `equal` 判定它们相等。
-
 ```cpp
-
 /*练习10.5：在本节对名册(roster)调用 equal 的例子中，如果两个名册中保存的都是 C 风格字符串而不是 string，会发生什么？*/
 
 #include <iostream>
 #include <algorithm>
-#include <string>
+#include <string.h>
 
 using namespace std;
 
@@ -289,15 +365,11 @@ int main(int argc, char *argv[])
     char *q[] = { strdup(p[0]), strdup(p[1]), strdup(p[2]) };
     // r 中每个指针都是 p 中指针的拷贝，指向相同的地址，因此 equal 判定它们相等
     char *r[] = { p[0], p[1], p[2] };
-    cout << equal(begin(p), end(p), q) << endl;
-    cout << equal(begin(p), end(p), r) << endl;
+    cout << equal(begin(p), end(p), q) << endl; //输出 0
+    cout << equal(begin(p), end(p), r) << endl; //输出 1
 
     return 0;
 }
-
-/*运行代码遇到了错误：
-error: 'strdup' was not declared in this scope
-不知道怎么回事，先放着 */
 ```
 
 ### 10.2.2 写容器元素的算法
@@ -310,6 +382,14 @@ fill(vec.begin(), vec.end(), 0);    // 将每个元素重置为 0
 // 将容器的一个子序列设置为 10
 fill(vec.begin(), vec.begin() + vec.size()/2, 10);
 ```
+
+**关键概念：迭代器参数**
+
+一些算法从两个序列中读取元素。构成这两个序列的元素可以来自于不同类型的容器。例如，第一个序列可能保存于一个 `vector` 中，而第二个序列可能保存于一个 `list`、`deque`、内置数组或其他容器中。而且，两个序列中元素的类型也不要求严格匹配。算 法要求的只是能够比较两个序列中的元素。例如，对 `equal` 算法，元素类型不要求相同，但是我们必须能使用 `==` 比较来自两个序列中的元素。
+
+操作两个序列的算法之间的区别在于我们如何传递第二个序列。一些算法，例如 `equal`，接受三个迭代器；前两个表示第一个序列的范围，第三个表示第二个序列中的首元素。其他算法接受四个迭代器：前两个表示第一个序列的元素范围，后两个表示第二个序列的范围。 
+
+用一个单一迭代器表示第二个序列的算法都假定第二个序列至少与第一个一样长。 确保算法不会试图访问第二个序列中不存在的元素是程序员的责任。例如，算法 `equal` 会将其第一个序列中的每个元素与第二个序列中的对应元素进行比较。如果第二个序列是第一个序列的一个子集．则程序会产生一个严重错误 —— `equal` 会试图访问第二个序列中末尾之后（不存在）的元素。 
 
 #### 算法不检查写操作
 
@@ -326,7 +406,7 @@ vector<int> vec;    // 空vector
 fill_n(vec.begin(), vec.size(), 0); // 将所有元素重置为 0
 ```
 
-函数 `fill_n` 假定写入指定个元素是安全的。即，如下像是的调用：
+函数 `fill_n` 假定写入指定个元素是安全的。即，如下形式的调用：
 
 `fill_n` 假定 `dest` 指向一个元素，而从`dest`开始的序列至少包含 `n` 个元素。
 
@@ -344,6 +424,8 @@ fill_n(vec.begin(), 10, 0);
 
 这个调用是一场灾难。我们指定了要写入 `10` 个元素，但 `vec` 中并没有元素，它是空的。所以这条语句的结果是未定义的。
 
+**WARNING**：向目的位置迭代器写入数据的算法假定目的位置足够大，能容纳要写入的元素。
+
 **练习10.6：编写程序，使用 fill_n 将一个序列中的 int 值都设置为 0。**
 
 ```cpp
@@ -351,7 +433,7 @@ fill_n(vec.begin(), 10, 0);
 
 #include <iostream>
 #include <fstream>
-#include <vector>
+#include <vector
 #include <algorithm>
 
 using namespace std;
@@ -410,7 +492,7 @@ fill_n(back_inserter(vec), 10, 0);  // 添加 10 个元素到 vec
 
 因此，当你传递给算法普通迭代器时，这些迭代器只能顺序或随机访问容器中的元素，造成的效果就是算法只能读取元素、改变元素值、移动元素，但无法添加或删除元素。
 
-但当我们传递给算法插入器，例如`back_inserter`时，由于这类迭代器能调用下层容器的操作来向容器插入元素，造成的算法执行的效果就是向容器中添加了元素。
+但当我们传递给算法插入器，例如`back_inserter`时，**由于这类迭代器能调用下层容器的操作来向容器插入元素**，造成的算法执行的效果就是向容器中添加了元素。
 
 因此，关键要理解：标准库算法从来不直接操作容器，它们只操作迭代器，从而间接访问容器。能不能插入和删除元素，不在于算法，而在于传递给它们的迭代器是否具有这样的能力。
 
@@ -426,10 +508,10 @@ fill_n(vec.begin(), 10, 0);
 
 /* (b）这段程序仍然是错误的。
 粗看起来，reserve 为 vec 分配了至少能容纳 10 个 int 的内存空间，调用 fill_n 时，vec已有足够空间。
-但泛型算法对于容器 的要求并不是有足够的空间，而是足够的元素。
+但泛型算法对于容器的要求并不是有足够的空间，而是足够的元素。
 此时vec仍然为空，没有任何元素。
 而算法又不具备向容器添加元素的能力，因此 fill_n 仍然失败。
-这里，我们还是需要 back_inserter 来让 fill_n 有能力向 vec 添加元素。
+这里，我们还是需要 back_inserter 来让 fill_n 有能力向 vec 添加元素。(重要！)
 其实，只有 0 有能力做到这一点，空间大小并不是问题，容器都能根据需要自动扩容。*/
 
 #include <iostream>
@@ -454,7 +536,7 @@ int main(int argc, char *argv[])
 
 #### 拷贝算法
 
-拷贝（`copy`）算法，接受三个迭代器，前两个表示一个输入范围，第三个表示目的序列的起始位置。
+拷贝（`copy`）算法是另一个向目的位置迭代器指向的输出序列中的元素写入数据的算法。此算法接受三个迭代器，前两个表示一个输入范围，第三个表示目的序列的起始位置。
 
 此算法将输入范围中的元素拷贝到目的序列中。
 
@@ -464,6 +546,8 @@ int a2[sizeof(a1)/sizeof(*a1)];  // a2 与 a1 大小一样
 // ret 指向拷贝到 a2 的尾元素之后的位置
 auto ret = copy(begin(a1), end(a1), a2);    // 把 a1 的内容拷贝给 a2
 ```
+
+我们定义了一个名为 `a2` 的数组，并使用 `sizeof` 确保 `a2` 与数组 `a1` 包含同样多元素（参见.9节，第139页）。接下来我们调用 `copy` 完成从 `a1` 到 `a2` 的拷贝。在调用 `copy` 后，两个数组中的元素具有相同的值。
 
 `copy`返回的是其目的位置迭代器（递增后）的值。即，`ret`恰好直线高靠背到`a2`的尾元素之后的位置。
 
@@ -523,7 +607,7 @@ int main(int argc, char *argv[])
 多个算法都提供所谓的“拷贝”版本。这些算法计算新元素的值，但不会将它们放置在输入序列的末尾，而是创建一个新序列保存这此结果。
 例如，`replace`算法读入一个序列，并将其中所有等于给定值的元素都改为另一个值。
 
-此算法接受`4`个参数：前两个是**迭代器**，表小输入序列，后两个一个是**要搜索的值**， 另个是**新值**。它将所有等于第一个值的元素替换为第二个值：
+此算法接受`4`个参数：前两个是**迭代器**，表示输入序列，后两个一个是**要搜索的值**， 另个是**新值**。它将所有等于第一个值的元素替换为第二个值：
 
 ```cpp
 // 将所有值为 0 的元素改为 42
@@ -539,12 +623,12 @@ replace(ilst.begin(), ilst.end(), 0, 42);
 replace_copy(ilst.cbegin(), ilst.cend(), back_inserter(ivec), 0, 42);
 ```
 
-`ilst` 并未改变，`ivec` 包含 `ilst` 的一份拷贝，不过原来的 `ilst` 中的值为 `0` 的元素在 `ivec` 中都变为 `42`。
+此调用后，`ilst` 并未改变，`ivec` 包含 `ilst` 的一份拷贝，不过原来的 `ilst` 中的值为 `0` 的元素在 `ivec` 中都变为 `42`。
 
 ### 总结一下
 
 ```cpp
-// fill_n() 和 back+inserter()
+// fill_n() 和 back_inserter()
 fill_n(back_inserter(vec), 10, 0);
 
 // fill_n()
@@ -561,7 +645,7 @@ cout << equal(lst.begin(), lst.end(), vec.begin()) << endl;
 
 泛型算法的一大优点是“泛型”，也就是一个算法可用于多种不同的数据类型，算法与所操作的数据结构分离。这对编程效率的提高是非常巨大的。
 
-要做到算法与数据结构分离，重要的技术手段就是使用迭代器作为两者的桥梁。算法从不操作具体的容器，从而也就不存在与特定容器绑定，不适用于其他容器的问题。算法只操作迭代器，由迭代器真正实现对容器的访问。不同容器实现自己特 定的迭代器（但不同迭代器是相容的），算法操作不同迭代器就实现了对不同容器的访问。
+要做到算法与数据结构分离，重要的技术手段就是使用迭代器作为两者的桥梁。算法从不操作具体的容器，从而也就不存在与特定容器绑定，不适用于其他容器的问题。算法只操作迭代器，由迭代器真正实现对容器的访问。不同容器实现自己特定的迭代器（但不同迭代器是相容的），算法操作不同迭代器就实现了对不同容器的访问。
 
 因此，并不是算法应该改变或不该改变容器的问题。为了实现与数据结构的分离，为了实现通用性，**算法根本就不该知道容器的存在**。算法访问数据的唯一通道传来只是迭代器。是否改变容器大小，完全是迭代器的选择和责任。当我们向`fill_n`传递`back_inserter`时，虽然最终效果是向容器添加了新的元素，但对`fill_n`说，根本不知道这回事儿。它仍然像往常一样（通过迭代器）向元素赋予新值，不过这次是通过`back_inserter`来赋值，而`back_inserter`选择将新值添加到了容器而已。
 
@@ -597,6 +681,59 @@ P343 有图, `end_unique`是最后一个不重复元素之后的位置
 
 `unique`的实现方式并不是删除重复值，而是将它们交换到了容器的末尾。
 
+**Notes**：标准库算法对迭代器而不是容器进行操作。因此，算法不能（直接）添加或删除元素。
+
+```cpp
+/*练习10.9：实现你自己的 elimDups。测试你的程序，分别在读取输入后、调用 unique 后以及调用 erase 后打印vector 的内容。*/
+
+#include <iostream>
+#include <fstream>
+#include <vector>
+#include <string>
+#include <algorithm>
+
+using namespace std;
+
+inline void output_words(vector<string> &words)
+{
+    for (auto iter = words.begin(); iter != words.end(); iter++)
+        cout << *iter << " ";
+    cout << endl;
+}
+
+void elimDups(vector<string> &words)
+{
+    output_words(words);
+
+    sort(words.begin(), words.end());
+    output_words(words);
+
+    auto end_unique = unique(words.begin(), words.end());
+    output_words(words);
+
+    words.erase(end_unique, words.end());
+    output_words(words);
+}
+
+int main(int argc, char *argv[])
+{
+    ifstream in(argv[1]);
+    if (!in) {
+        cout << "Fails to open the file!" << endl;
+        exit(1);
+    }
+
+    vector<string> words;
+    string word;
+    while (in >> word)
+        words.push_back(word);
+    
+    elimDups(words);
+
+    return 0;
+}
+```
+
 #### 使用容器操作删除元素
 
 为了真正地删除无用元素，使用`erase`删除从`end_unique`开始直至`words`末尾的范围内的所有元素。
@@ -606,6 +743,8 @@ P343 有图, `end_unique`是最后一个不重复元素之后的位置
 迭代器相等意味着传递给`erase`的元素范围为空。删除一个空范围没有什么不良后果，因此程序即使在输入中无重复元素的情况下也是正确的。
 
 ## 10.3 定制操作
+
+为了按长度重排 `vector`，我们将使用 `sort` 的第二个版本，此版本是重载过的，它接受第三个参数，此参数是一个 **谓词(predicate)**。
 
 ### 10.3.1 向算法传递函数
 
@@ -625,6 +764,7 @@ sort(words.begin(), words.end(), isShorter);
 
 #### 排序算法
 
+为了保持相同长度的单词按字典序排列，可以使用 `stable_sort` 算法。这种稳定排序算法维持相等元素的原有顺序。
 通过调用`stable_sort`，可以保持等长元素间的字典序：
 
 ```cpp
@@ -637,6 +777,162 @@ cout << endl;
 ```
 
 调用前`words`是按字典序排列的，调用之后，`words`会按元素大小排序....
+
+```cpp
+/*练习10.11：编写程序，使用 stable_sort 和 isShorter 将传递给你的 elimDups 版本的 vector 排序。打印 vector 的内容，验证你的程序的正确性。*/
+
+#include <iostream>
+#include <fstream>
+#include <vector>
+#include <string>
+#include <algorithm>
+
+using namespace std;
+
+inline void output_words(vector<string> &words)
+{
+    for (auto iter = words.begin(); iter != words.end(); iter++)
+        cout << *iter << " ";
+    cout << endl;
+}
+
+bool isShorter(const string &s1, const string &s2)
+{
+    return s1.size() < s2.size();
+}
+
+void elimDups(vector<string> &words)
+{
+    output_words(words);
+
+    sort(words.begin(), words.end());
+    output_words(words);
+
+    auto end_unique = unique(words.begin(), words.end());
+    output_words(words);
+
+    words.erase(end_unique, words.end());
+    output_words(words);
+
+    stable_sort(words.begin(), words.end(), isShorter);
+    output_words(words);
+}
+
+int main(int argc, char *argv[])
+{
+    ifstream in(argv[1]);
+    if (!in) {
+        cout << "Fails to open the file!" << endl;
+        exit(1);
+    }
+
+    vector<string> words;
+    string word;
+    while (in >> word)
+        words.push_back(word);
+    
+    elimDups(words);
+
+    return 0;
+}
+```
+
+```cpp
+/*练习10.12：编写名为 `compareIsbn` 的函数，比较两个 `Sales_data` 对象的 `isbn()` 成员。使用这个函数排序一个保存`Sales_data` 对象的 `vector`。*/
+
+我们将 `compareIsbn` 定义为一个二元谓词，接受两个 `Sales_data` 对象，通过 `isbn` 成员函数获取 `ISBN` 编号，若前者小于后者返回真，否则返回假。
+
+```cpp
+inline bool compareIsbn(const Sales_data &lhs, const Sales_data &rhs)
+{
+    return lhs.isbn() < rhs.isbn();
+}
+```
+
+在主程序中，将 `compareIsbn` 作为第三个参数传递给 `sort`，即可实现销售数据按 `ISBN` 号排序。
+
+```cpp
+#include <iostream>
+#include <fstream>
+#include <vector>
+#include "Sales_data.h"
+#include <algorithm>
+
+using namespace std;
+
+int main(int argc, char *argv[])
+{
+    ifstream in (argv[1]);
+    if (!in) {
+        cout << "Fails to open the file!" << endl;
+        exit(1);
+    }
+}
+
+vector<Sales_data> sds;
+Sales_data sd;
+while (read(in, sd))
+    sds.push_back(sd);
+
+sort(sds.begin(), sds.end(), compareIsbn);
+
+for (const auto &s : sds) {
+    print(cout, s);
+    cout << endl;
+}
+
+return 0;
+```
+
+```cpp
+/*练习10.13：标准库定义了名为 `partition` 的算法，它接受一个谓词，对容器内容进行划分，使得谓词为 `true` 的值会排在容器的前半部分，而使谓词为 `false` 的值会排在后半部分。算法返回一个迭代器．指向最后一个使谓词为 `true` 的元素之 后的位置。编写函数．接受一个 `string`，返回一个 `bool` 值，指出 `string` 是否有 `5` 个或更多字符。使用此函数划分 `words`。打印出长度大于等于 `5` 的元素。
+
+【出题思路】 练习定义和使用一元谓词
+【解答】 本题要求谓词判断一个 `string` 对象的长度是否大于等于 `5`，而不是比较两个 `string` 对象，因此它应是一个一元谓词。其他与上一题基本类似。但需要注意，我们应该保存 `partition` 返回的迭代器 `iter`，打印范围 `[words.begin(), iter)` 中的字符串。*/
+
+```cpp
+#include <iostream>
+#include <fstream>
+#include <vector>
+#include <string>
+#include <algorithm>
+
+using namespace std;
+
+inline void output_words(vector<string>::iterator beg, vector<string>::iterator end)
+{
+    for (auto iter = beg; iter != end; iter++)
+        cout << *iter << " ";
+    cout << endl;
+}
+
+bool five_or_more(const string &s1)
+{
+    return s1.sisze() >= 5;
+}
+
+int main(int argc, char *argv[])
+{
+    ifstream in(argv[1]);
+    if (!in) {
+        cout << "Fails to open the file!" << endl;
+        exit(1);
+    }
+
+    vector<string> words;
+    string word;
+    while (in >> word)
+        words.push_back(word);
+    output_words(words.begin(), words.end());
+
+    auto iter = partition(words.begin(), words.end(), five_or_more);
+    output_words(words.begin(), iter);
+
+    return 0;
+}
+```
+
+```
 
 ### 10.3.2 lambda表达式
 
